[package]
name = "ruspiro-timer"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.6.0" # remember to update html_root_url
description = """This crates provides simple timing functions to pause the current processing for a specific amount of time. The core pausing is called on will block."""
license = "Apache-2.0 OR MIT"
repository = "https://github.com/RusPiRo/ruspiro-timer/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-timer/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "timer"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-mmio-register = "~0.1.3"
ruspiro-arch-aarch64 = "~0.1.5"
ruspiro-interrupt = "~0.5.0"
ruspiro-singleton = "~0.4.3"

[features]
pi3 = ["ruspiro-interrupt/pi3"]
pi4_low = ["ruspiro-interrupt/pi4_low"]
pi4_high = ["ruspiro-interrupt/pi4_high"]

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "development" }
ruspiro-interrupt = { git = "https://github.com/RusPiRo/ruspiro-interrupt.git", branch = "development" }
ruspiro-singleton = { git = "https://github.com/RusPiRo/ruspiro-singleton.git", branch = "development" }
